{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 159,
  "lineage": "7c7fa575-6259-da30-52f8-b5b7c5466f59",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "stack_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-01126ecf89335cfb7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267419089:subnet/subnet-01126ecf89335cfb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01126ecf89335cfb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267419089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0d7572c32c89d9d9f"
          }
        },
        {
          "index_key": "subnet-015c0d22465c1a320",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267419089:subnet/subnet-015c0d22465c1a320",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015c0d22465c1a320",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267419089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0d7572c32c89d9d9f"
          }
        },
        {
          "index_key": "subnet-043d6002b1c2fa406",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267419089:subnet/subnet-043d6002b1c2fa406",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4088,
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043d6002b1c2fa406",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267419089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0d7572c32c89d9d9f"
          }
        },
        {
          "index_key": "subnet-078613bbafffc2118",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267419089:subnet/subnet-078613bbafffc2118",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078613bbafffc2118",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267419089",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0d7572c32c89d9d9f"
          }
        }
      ]
    },
    {
      "module": "module.ASG-BASE[0]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "balance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267419089:loadbalancer/app/Clixx-ALB/8131008a3159b164",
            "arn_suffix": "app/Clixx-ALB/8131008a3159b164",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Clixx-ALB-2073087511.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267419089:loadbalancer/app/Clixx-ALB/8131008a3159b164",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Clixx-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0105b538c6902bc2e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01126ecf89335cfb7"
              },
              {
                "subnet_id": "subnet-015c0d22465c1a320"
              },
              {
                "subnet_id": "subnet-043d6002b1c2fa406"
              },
              {
                "subnet_id": "subnet-078613bbafffc2118"
              }
            ],
            "subnets": [
              "subnet-01126ecf89335cfb7",
              "subnet-015c0d22465c1a320",
              "subnet-043d6002b1c2fa406",
              "subnet-078613bbafffc2118"
            ],
            "vpc_id": "vpc-0d7572c32c89d9d9f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.SECURITY-BASE.aws_security_group.stack"
          ]
        }
      ]
    },
    {
      "module": "module.ASG-BASE[0]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267419089:listener/app/Clixx-ALB/8131008a3159b164/4de72b0f84533abc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:533267419089:targetgroup/Clixx-LTG/cef104c182770363",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267419089:listener/app/Clixx-ALB/8131008a3159b164/4de72b0f84533abc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:533267419089:loadbalancer/app/Clixx-ALB/8131008a3159b164",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ASG-BASE.aws_lb.balance",
            "module.ASG-BASE.aws_lb_target_group.balance",
            "module.SECURITY-BASE.aws_security_group.stack"
          ]
        }
      ]
    },
    {
      "module": "module.ASG-BASE[0]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "balance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267419089:targetgroup/Clixx-LTG/cef104c182770363",
            "arn_suffix": "targetgroup/Clixx-LTG/cef104c182770363",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267419089:targetgroup/Clixx-LTG/cef104c182770363",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Clixx-LTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d7572c32c89d9d9f"
          }
        }
      ]
    },
    {
      "module": "module.EC2-BASE[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e338ebabfd5b06f",
            "arn": "arn:aws:ec2:us-east-1:533267419089:instance/i-0494d5e531d1707fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0494d5e531d1707fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0428c7d0710518715",
            "private_dns": "ip-172-31-34-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.104",
            "public_dns": "ec2-54-145-246-69.compute-1.amazonaws.com",
            "public_ip": "54.145.246.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:533267419089:key/8f8422d4-2875-4cc6-989f-72787e932423",
                "throughput": 0,
                "volume_id": "vol-0a0d62b861a95fd67",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "CliXX-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01126ecf89335cfb7",
            "tags": {
              "Name": "Application_Server_Aut"
            },
            "tags_all": {
              "Name": "Application_Server_Aut"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0105b538c6902bc2e"
            ]
          },
          "dependencies": [
            "data.aws_ami.stack_ami",
            "module.SECURITY-BASE.aws_security_group.stack"
          ]
        }
      ]
    },
    {
      "module": "module.SECURITY-BASE[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "stack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267419089:security-group/sg-0105b538c6902bc2e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0105b538c6902bc2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all request from anywhere",
                "from_port": 2049,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all request from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all request from anywhere",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CliXX-sg",
            "name_prefix": "",
            "owner_id": "533267419089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_grp"
            },
            "tags_all": {
              "Name": "security_grp"
            },
            "timeouts": {
              "create": null,
              "delete": "2m"
            },
            "vpc_id": "vpc-0d7572c32c89d9d9f"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}